Fix ProductCard text alignment

--- a/src/components/ProductModal/ProductModal.module.css
+++ b/src/components/ProductModal/ProductModal.module.css
@@ -37,7 +37,7 @@
 }
 
 .modalcontainer h2 {
-    margin-top: -rem;
+    margin-top: 1rem;
 }
 
 .quantityselectorcontainer
