--- a/src/components/product_card/ProductCard.module.css
+++ b/src/components/product_card/ProductCard.module.css
@@ -27,7 +27,7 @@
 }
 
 .textcontainer {
-    margin-left: 40px;
+    margin-left: 6px;
 }
 
 @media screen and (max-width: 1400px) {
